# node-todo-cicd

./: CVC5.smt2  Pigeon.pgf  Pigeon.py  Pigeon15.py  README.md  perf.py  pyproject.toml  test.py  utils.py
CPMpy/: __init__.py  performance_elements_2023041918_60_23.csv  pyproject.toml  racks.py  racks_lifted.py  racks_lifted_vs_racks_nonlifted.ipynb  racks_model.py  run_performance.py  test_lifted_racks.py  test_lifted_racks_minizinc.py  test_racks.py  test_racks_model.py
latest/: pyproject.toml  tests
latest/idp_engine/: Annotate.py  Assignments.py  Expression.py  IDP_Z3.py  Idp.tx  Idp_to_Z3.py  Lift.py  Parse.py  Theory.py
theories/BAPA/: concrete.idp  l_monotype1.idp  l_monotype1.out  l_monotype2.idp  l_monotype2.out  l_type1.idp  l_type1.out  l_type2.idp  l_type2.out  monotype1.idp  monotype1.out  monotype2.idp  monotype2.out  type1.idp  type1.out  type2.idp  type2.out
theories/CADE07-1/: concrete.idp  l_monotype1.idp  l_monotype2.idp  l_type1.idp  l_type2.idp  monotype1.idp  monotype2.idp  type1.idp  type2.idp
theories/CADE07-2b/: concrete.idp  l_monotype1.idp  l_monotype1.out  l_monotype2.idp  l_monotype2.out  l_type1.idp  l_type1.out  l_type2.idp  l_type2.out  monotype1.idp  monotype1.out  monotype2.idp  monotype2.out  type1.idp  type1.out  type2.idp  type2.out
theories/CADE07-6/: concrete.idp  l_monotype1.idp  l_monotype2.idp  l_type1.idp  l_type2.idp  monotype1.idp  monotype2.idp  type1.idp  type1.out  type2.idp
theories/CADE07-6b/: concrete.idp  l_monotype1.idp  l_monotype1.out  l_monotype2.idp  l_monotype2.out  l_type1.idp  l_type1.out  l_type2.idp  l_type2.out  monotype1.idp  monotype1.out  monotype2.idp  monotype2.out  type1.idp  type1.out  type2.idp  type2.out
theories/HCP/: concrete.idp  l_monotype1.idp  l_monotype1.out  (+14 more)
(+332 files in other folders)
